--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fallback"
   ],
   "dependencies": {
+    "escape-string-regexp": "^1.0.5",
     "object-assign": "^4.1.0"
   },
   "devDependencies": {
