--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4.0.0"
   },
   "scripts": {
     "test": "xo && ava",
@@ -33,8 +33,7 @@
     "fallback"
   ],
   "dependencies": {
-    "escape-string-regexp": "^1.0.5",
-    "object-assign": "^4.1.0"
+    "escape-string-regexp": "^1.0.5"
   },
   "devDependencies": {
     "ava": "*",
