--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"devDependencies": {
 		"ava": "^3.15.0",
 		"tsd": "^0.17.0",
-		"xo": "^0.24.0"
+		"typescript": "^4.3.5",
+		"xo": "^0.40.3"
 	}
 }
