--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "figures",
 	"version": "3.2.0",
-	"description": "Unicode symbols with Windows CMD fallbacks",
+	"description": "Unicode symbols with fallbacks for older terminals",
 	"license": "MIT",
 	"repository": "sindresorhus/figures",
 	"funding": "https://github.com/sponsors/sindresorhus",
